--- a/src/components/stock-price/stock-finder/stock-finder.css
+++ b/src/components/stock-price/stock-finder/stock-finder.css
@@ -1,6 +1,6 @@
 :host {
   font-family: sans-serif;
-  border: 2px solid rgb(98, 38, 98);
+  border: 2px solid var(--color-primary, black);
   margin: 2rem;
   padding: 1rem;
   display: block;
@@ -10,7 +10,7 @@
 
 form input {
   font: inherit;
-  color: rgb(98, 38, 98);
+  color: var(--color-primary, black);
   padding: 0.1rem 0.25rem;
   display: block;
   margin-bottom: 0.5rem;
@@ -24,19 +24,20 @@ form button:focus {
 form button {
   font: inherit;
   padding: 0.25rem 0.5rem;
-  border: 1px solid rgb(98, 38, 98);
-  background-color: rgb(98, 38, 98);
-  color: white;
+  border: 1px solid var(--color-primary, black);
+  background: var(--color-primary, black);
+  color: var(--color-primary-inverse, white);
+  cursor: pointer;
 }
 
 form button:hover,
 form button:active {
-  background-color: rgb(215, 134, 215);
-  border-color: rgb(215, 134, 215);
+  background: var(--color-primary-highlight, grey);
+  border-color: var(--color-primary-highlight, grey);
 }
 
 form button:disabled {
-  background-color: #ccc;
+  background: #ccc;
   border-color: #ccc;
   color: white;
   cursor: not-allowed;
@@ -50,13 +51,13 @@ ul {
 
 li {
   margin: 0.25rem 0;
-  padding: 0.25;
+  padding: 0.25rem;
   border: 1px solid #ccc;
   cursor: pointer;
 }
 
 li:hover,
 li:active {
-  background: rgb(98, 38, 98);
-  color: white;
+  background: var(--color-primary, black);
+  color: var(--color-primary-inverse, white);
 }
